[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/world/PlatformSpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/world/Platform.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Main.gd" type="Script" id=3]
[ext_resource path="res://assets/img/menu/B.png" type="Texture" id=4]
[ext_resource path="res://src/commenter/Commenter.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/img/menu/A2.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/smashcat.tres" type="DynamicFont" id=7]
[ext_resource path="res://src/world/CameraShake.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/fighter/move.shader" type="Shader" id=9]
[ext_resource path="res://assets/img/world/bg_bg.png" type="Texture" id=10]
[ext_resource path="res://src/fighter/ArrowsManager.gd" type="Script" id=12]
[ext_resource path="res://src/world/grafitis/GrafManager.gd" type="Script" id=13]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 9 )
shader_param/direction = Vector2( 0, -1 )
shader_param/speed_scale = 0.2
shader_param/speed_factor = 1.0

[node name="Main" type="Node2D"]
pause_mode = 2
position = Vector2( 1, 0 )
script = ExtResource( 3 )
pause_time = 0.08
inactive_time = 0.2

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 142, 51 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 120, 67.5 )

[node name="Camera2D" parent="Node2D" instance=ExtResource( 8 )]

[node name="PlatformSpawner" parent="." instance=ExtResource( 1 )]
pause_mode = 1
enabled = true

[node name="BG2" type="Node2D" parent="."]
position = Vector2( 119, 68 )
script = ExtResource( 13 )

[node name="BG" type="Sprite" parent="BG2"]
pause_mode = 1
material = SubResource( 1 )
position = Vector2( -68, -38 )
texture = ExtResource( 10 )
offset = Vector2( 68, 38 )

[node name="Grafs" type="Node2D" parent="BG2"]

[node name="Platforms" type="Node2D" parent="."]
pause_mode = 1

[node name="PauseTimer" type="Timer" parent="."]
pause_mode = 2
wait_time = 5.0
one_shot = true

[node name="OffScreenArrows" type="Node2D" parent="."]
script = ExtResource( 12 )

[node name="Boxes" type="Node2D" parent="."]
pause_mode = 1

[node name="Fighters" type="Node2D" parent="."]
pause_mode = 1

[node name="PlatformTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Splatters" type="Node2D" parent="."]

[node name="SFX" type="AudioStreamPlayer2D" parent="."]

[node name="StartPlatform" parent="." instance=ExtResource( 2 )]
position = Vector2( 136, 118 )
scale = Vector2( 20, 1 )

[node name="Comentator" parent="." instance=ExtResource( 5 )]
position = Vector2( 3, 119 )
spawning_boxes = true

[node name="Music" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="LifesHBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_top = 3.0
margin_right = 239.0
margin_bottom = 7.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="Control" type="Control" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBut" type="HBoxContainer" parent="PauseMenu/Control"]
margin_left = 44.0
margin_top = 38.0
margin_right = 87.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="PauseMenu/Control/MenuBut"]
margin_right = 12.0
margin_bottom = 12.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="PauseMenu/Control/MenuBut"]
margin_left = 16.0
margin_top = 3.0
margin_right = 43.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.917647, 0.882353, 0.941176, 1 )
text = "MENU"

[node name="ResplayBut" type="HBoxContainer" parent="PauseMenu/Control"]
margin_left = 148.0
margin_top = 39.0
margin_right = 201.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PauseMenu/Control/ResplayBut"]
margin_top = 2.0
margin_right = 38.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.917647, 0.882353, 0.941176, 1 )
text = "REPLAY"

[node name="TextureRect" type="TextureRect" parent="PauseMenu/Control/ResplayBut"]
margin_left = 42.0
margin_right = 53.0
margin_bottom = 11.0
texture = ExtResource( 6 )

[connection signal="timeout" from="PauseTimer" to="." method="_on_PauseTimer_timeout"]
[connection signal="timeout" from="PlatformTimer" to="." method="_on_PlatformTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
